feat(api): allow querying best companies in the world
